# my-uefi-app

./: .gitignore  Cargo.toml  Makefile
src/: fox_acpi.rs  fox_i8042.rs  fox_port.rs  fox_uefi.rs  main.rs
src/drivers/: i8042.rs  mod.rs
