[package]
name = "my-uefi-app"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = "5.2"
bit_field = "0.10"
log = "0.4"
#uefi = { version = "0.35", features = ["logger", "panic_handler", "global_allocator"] }
uefi = { git = "https://github.com/rust-osdev/uefi-rs", features = ["logger", "panic_handler", "global_allocator"]}
x86_64 = "0.15"

[lints.rust]
const_item_mutation = "deny"

[lints.clippy]
uninlined_format_args = "allow"
